2003-01-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rgdb_specs.texi: Set @setfilename rgdb_specs.info.

2003-01-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Put GENERATED_FILES into $builddir.

2003-01-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* version.texi: Remove from CVS.
	* stamp-vti: Remove from CVS.
	* .cvsignore: Add version.texi.
	Add stamp-vti.
	Re-sort.

2003-01-21	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-11-13	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-10-24	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: include main.am, require automake-1.5.

2001-01-17	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added rtems_header.html and rtems_footer.html.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.