@@ -1,3 +1,7 @@
+2003-05-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* daemon.t: Reflect c/src/exec having moved to cpukit.
+
 2003-01-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* rgdb_specs.texi: Set @setfilename rgdb_specs.info.
